# flowbit

./: .env.example  .gitignore  FEATURES_COMPLETE.md  FULL_DATA_CAPABILITIES.md  HOW_TO_RUN.md  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/web/: next.config.js  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/analytics/: page.tsx
apps/web/src/app/chat/: page.tsx
apps/web/src/app/departments/: page.tsx
apps/web/src/app/files/: page.tsx
apps/web/src/app/invoices/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/users/: page.tsx
apps/web/src/components/: BarChartHorizontal.tsx  CashOutflowChart.tsx  DonutChart.tsx  Header.tsx  InvoicesTable.tsx  LineChart.tsx  OverviewCard.tsx  Sidebar.tsx
apps/web/src/components/ui/: button.tsx  card.tsx  input.tsx
apps/web/src/lib/: api.ts  format.ts  types.ts  utils.ts
apps/web/src/pages/api/: cash-outflow.ts  category-spend.ts  chat-with-data.ts  confidence-analysis.ts  department-analytics.ts  file-metadata.ts  invoice-trends.ts  invoices.ts  stats.ts  vendors-top10.ts
services/vanna/: README.md  main.py  pyproject.toml
